releases/0.4/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> re
Rule 1     re -> alternation
Rule 2     re -> simple
Rule 3     alternation -> re | simple
Rule 4     simple -> concatenation
Rule 5     simple -> basic
Rule 6     concatenation -> simple basic
Rule 7     basic -> elementary
Rule 8     basic -> asterisk
Rule 9     basic -> plus
Rule 10    basic -> optional
Rule 11    basic -> nrepeat
Rule 12    elementary -> group
Rule 13    elementary -> directionset
Rule 14    elementary -> command
Rule 15    elementary -> literal
Rule 16    elementary -> charclass
Rule 17    elementary -> anychar
Rule 18    elementary -> nodisplay
Rule 19    elementary -> anchor
Rule 20    elementary -> predefined
Rule 21    asterisk -> elementary *
Rule 22    asterisk -> elementary * ?
Rule 23    plus -> elementary +
Rule 24    plus -> elementary + ?
Rule 25    optional -> elementary ?
Rule 26    nrepeat -> elementary { number }
Rule 27    nrepeat -> elementary { , number }
Rule 28    nrepeat -> elementary { number , }
Rule 29    nrepeat -> elementary { number , number }
Rule 30    anychar -> .
Rule 31    nodisplay -> !
Rule 32    number -> DIGIT
Rule 33    number -> DIGIT number
Rule 34    group -> ( groupbody )
Rule 35    groupbody -> ? specialgroup
Rule 36    groupbody -> basicgroup
Rule 37    specialgroup -> _ lengthcheck
Rule 38    specialgroup -> | stationarygroup
Rule 39    specialgroup -> : nocapture
Rule 40    lengthcheck -> ( number ) re
Rule 41    stationarygroup -> re
Rule 42    nocapture -> re
Rule 43    basicgroup -> re
Rule 44    charclass -> [ classitems ]
Rule 45    classitems -> ^ baseitems
Rule 46    classitems -> classitems2
Rule 47    classitems2 -> baseitems
Rule 48    classitems2 -> baseitems | baseitems
Rule 49    baseitems -> classatom
Rule 50    baseitems -> classatom baseitems
Rule 51    classatom -> classliteral
Rule 52    classatom -> classrange
Rule 53    classliteral -> !
Rule 54    classliteral -> "
Rule 55    classliteral -> #
Rule 56    classliteral -> $
Rule 57    classliteral -> %
Rule 58    classliteral -> &
Rule 59    classliteral -> '
Rule 60    classliteral -> (
Rule 61    classliteral -> )
Rule 62    classliteral -> *
Rule 63    classliteral -> +
Rule 64    classliteral -> ,
Rule 65    classliteral -> .
Rule 66    classliteral -> /
Rule 67    classliteral -> :
Rule 68    classliteral -> ;
Rule 69    classliteral -> <
Rule 70    classliteral -> =
Rule 71    classliteral -> >
Rule 72    classliteral -> ?
Rule 73    classliteral -> @
Rule 74    classliteral -> [
Rule 75    classliteral -> \
Rule 76    classliteral -> _
Rule 77    classliteral -> `
Rule 78    classliteral -> {
Rule 79    classliteral -> }
Rule 80    classliteral -> ~
Rule 81    classliteral -> literal
Rule 82    classrange -> classliteral - classliteral
Rule 83    predefined -> ` ALPHA
Rule 84    directionset -> ^ DIGIT
Rule 85    anchor -> $ DIGIT
Rule 86    anchor -> $ ALPHA
Rule 87    command -> >
Rule 88    command -> <
Rule 89    command -> /
Rule 90    command -> \
Rule 91    command -> #
Rule 92    command -> %
Rule 93    literal -> ESCAPED
Rule 94    literal -> ALPHA
Rule 95    literal -> DIGIT
Rule 96    literal -> OTHER

Terminals, with rules where they appear

!                    : 31 53
"                    : 54
#                    : 55 91
$                    : 56 85 86
%                    : 57 92
&                    : 58
'                    : 59
(                    : 34 40 60
)                    : 34 40 61
*                    : 21 22 62
+                    : 23 24 63
,                    : 27 28 29 64
-                    : 82
.                    : 30 65
/                    : 66 89
:                    : 39 67
;                    : 68
<                    : 69 88
=                    : 70
>                    : 71 87
?                    : 22 24 25 35 72
@                    : 73
ALPHA                : 83 86 94
DIGIT                : 32 33 84 85 95
ESCAPED              : 93
OTHER                : 96
[                    : 44 74
\                    : 75 90
]                    : 44
^                    : 45 84
_                    : 37 76
`                    : 77 83
error                : 
{                    : 26 27 28 29 78
|                    : 3 38 48
}                    : 26 27 28 29 79
~                    : 80

Nonterminals, with rules where they appear

alternation          : 1
anchor               : 19
anychar              : 17
asterisk             : 8
baseitems            : 45 47 48 48 50
basic                : 5 6
basicgroup           : 36
charclass            : 16
classatom            : 49 50
classitems           : 44
classitems2          : 46
classliteral         : 51 82 82
classrange           : 52
command              : 14
concatenation        : 4
directionset         : 13
elementary           : 7 21 22 23 24 25 26 27 28 29
group                : 12
groupbody            : 34
lengthcheck          : 37
literal              : 15 81
nocapture            : 39
nodisplay            : 18
nrepeat              : 11
number               : 26 27 28 29 29 33 40
optional             : 10
plus                 : 9
predefined           : 20
re                   : 3 40 41 42 43 0
simple               : 2 3 6
specialgroup         : 35
stationarygroup      : 38

Parsing method: LALR

state 0

    (0) S' -> . re
    (1) re -> . alternation
    (2) re -> . simple
    (3) alternation -> . re | simple
    (4) simple -> . concatenation
    (5) simple -> . basic
    (6) concatenation -> . simple basic
    (7) basic -> . elementary
    (8) basic -> . asterisk
    (9) basic -> . plus
    (10) basic -> . optional
    (11) basic -> . nrepeat
    (12) elementary -> . group
    (13) elementary -> . directionset
    (14) elementary -> . command
    (15) elementary -> . literal
    (16) elementary -> . charclass
    (17) elementary -> . anychar
    (18) elementary -> . nodisplay
    (19) elementary -> . anchor
    (20) elementary -> . predefined
    (21) asterisk -> . elementary *
    (22) asterisk -> . elementary * ?
    (23) plus -> . elementary +
    (24) plus -> . elementary + ?
    (25) optional -> . elementary ?
    (26) nrepeat -> . elementary { number }
    (27) nrepeat -> . elementary { , number }
    (28) nrepeat -> . elementary { number , }
    (29) nrepeat -> . elementary { number , number }
    (34) group -> . ( groupbody )
    (84) directionset -> . ^ DIGIT
    (87) command -> . >
    (88) command -> . <
    (89) command -> . /
    (90) command -> . \
    (91) command -> . #
    (92) command -> . %
    (93) literal -> . ESCAPED
    (94) literal -> . ALPHA
    (95) literal -> . DIGIT
    (96) literal -> . OTHER
    (44) charclass -> . [ classitems ]
    (30) anychar -> . .
    (31) nodisplay -> . !
    (85) anchor -> . $ DIGIT
    (86) anchor -> . $ ALPHA
    (83) predefined -> . ` ALPHA

    (               shift and go to state 15
    ^               shift and go to state 22
    >               shift and go to state 13
    <               shift and go to state 12
    /               shift and go to state 31
    \               shift and go to state 7
    #               shift and go to state 27
    %               shift and go to state 32
    ESCAPED         shift and go to state 5
    ALPHA           shift and go to state 30
    DIGIT           shift and go to state 29
    OTHER           shift and go to state 8
    [               shift and go to state 4
    .               shift and go to state 33
    !               shift and go to state 6
    $               shift and go to state 9
    `               shift and go to state 26

    nodisplay                      shift and go to state 17
    concatenation                  shift and go to state 1
    alternation                    shift and go to state 2
    group                          shift and go to state 3
    simple                         shift and go to state 19
    command                        shift and go to state 20
    optional                       shift and go to state 21
    nrepeat                        shift and go to state 28
    asterisk                       shift and go to state 23
    plus                           shift and go to state 18
    basic                          shift and go to state 25
    re                             shift and go to state 10
    anychar                        shift and go to state 24
    literal                        shift and go to state 11
    elementary                     shift and go to state 36
    anchor                         shift and go to state 34
    directionset                   shift and go to state 16
    predefined                     shift and go to state 14
    charclass                      shift and go to state 35

state 1

    (4) simple -> concatenation .

    (               reduce using rule 4 (simple -> concatenation .)
    ^               reduce using rule 4 (simple -> concatenation .)
    >               reduce using rule 4 (simple -> concatenation .)
    <               reduce using rule 4 (simple -> concatenation .)
    /               reduce using rule 4 (simple -> concatenation .)
    \               reduce using rule 4 (simple -> concatenation .)
    #               reduce using rule 4 (simple -> concatenation .)
    %               reduce using rule 4 (simple -> concatenation .)
    ESCAPED         reduce using rule 4 (simple -> concatenation .)
    ALPHA           reduce using rule 4 (simple -> concatenation .)
    DIGIT           reduce using rule 4 (simple -> concatenation .)
    OTHER           reduce using rule 4 (simple -> concatenation .)
    [               reduce using rule 4 (simple -> concatenation .)
    .               reduce using rule 4 (simple -> concatenation .)
    !               reduce using rule 4 (simple -> concatenation .)
    $               reduce using rule 4 (simple -> concatenation .)
    `               reduce using rule 4 (simple -> concatenation .)
    |               reduce using rule 4 (simple -> concatenation .)
    )               reduce using rule 4 (simple -> concatenation .)
    $end            reduce using rule 4 (simple -> concatenation .)


state 2

    (1) re -> alternation .

    |               reduce using rule 1 (re -> alternation .)
    )               reduce using rule 1 (re -> alternation .)
    $end            reduce using rule 1 (re -> alternation .)


state 3

    (12) elementary -> group .

    *               reduce using rule 12 (elementary -> group .)
    +               reduce using rule 12 (elementary -> group .)
    ?               reduce using rule 12 (elementary -> group .)
    {               reduce using rule 12 (elementary -> group .)
    (               reduce using rule 12 (elementary -> group .)
    ^               reduce using rule 12 (elementary -> group .)
    >               reduce using rule 12 (elementary -> group .)
    <               reduce using rule 12 (elementary -> group .)
    /               reduce using rule 12 (elementary -> group .)
    \               reduce using rule 12 (elementary -> group .)
    #               reduce using rule 12 (elementary -> group .)
    %               reduce using rule 12 (elementary -> group .)
    ESCAPED         reduce using rule 12 (elementary -> group .)
    ALPHA           reduce using rule 12 (elementary -> group .)
    DIGIT           reduce using rule 12 (elementary -> group .)
    OTHER           reduce using rule 12 (elementary -> group .)
    [               reduce using rule 12 (elementary -> group .)
    .               reduce using rule 12 (elementary -> group .)
    !               reduce using rule 12 (elementary -> group .)
    $               reduce using rule 12 (elementary -> group .)
    `               reduce using rule 12 (elementary -> group .)
    |               reduce using rule 12 (elementary -> group .)
    )               reduce using rule 12 (elementary -> group .)
    $end            reduce using rule 12 (elementary -> group .)


state 4

    (44) charclass -> [ . classitems ]
    (45) classitems -> . ^ baseitems
    (46) classitems -> . classitems2
    (47) classitems2 -> . baseitems
    (48) classitems2 -> . baseitems | baseitems
    (49) baseitems -> . classatom
    (50) baseitems -> . classatom baseitems
    (51) classatom -> . classliteral
    (52) classatom -> . classrange
    (53) classliteral -> . !
    (54) classliteral -> . "
    (55) classliteral -> . #
    (56) classliteral -> . $
    (57) classliteral -> . %
    (58) classliteral -> . &
    (59) classliteral -> . '
    (60) classliteral -> . (
    (61) classliteral -> . )
    (62) classliteral -> . *
    (63) classliteral -> . +
    (64) classliteral -> . ,
    (65) classliteral -> . .
    (66) classliteral -> . /
    (67) classliteral -> . :
    (68) classliteral -> . ;
    (69) classliteral -> . <
    (70) classliteral -> . =
    (71) classliteral -> . >
    (72) classliteral -> . ?
    (73) classliteral -> . @
    (74) classliteral -> . [
    (75) classliteral -> . \
    (76) classliteral -> . _
    (77) classliteral -> . `
    (78) classliteral -> . {
    (79) classliteral -> . }
    (80) classliteral -> . ~
    (81) classliteral -> . literal
    (82) classrange -> . classliteral - classliteral
    (93) literal -> . ESCAPED
    (94) literal -> . ALPHA
    (95) literal -> . DIGIT
    (96) literal -> . OTHER

    ^               shift and go to state 44
    !               shift and go to state 42
    "               shift and go to state 50
    #               shift and go to state 55
    $               shift and go to state 61
    %               shift and go to state 64
    &               shift and go to state 37
    '               shift and go to state 59
    (               shift and go to state 71
    )               shift and go to state 45
    *               shift and go to state 43
    +               shift and go to state 56
    ,               shift and go to state 60
    .               shift and go to state 68
    /               shift and go to state 62
    :               shift and go to state 67
    ;               shift and go to state 57
    <               shift and go to state 63
    =               shift and go to state 54
    >               shift and go to state 51
    ?               shift and go to state 49
    @               shift and go to state 53
    [               shift and go to state 40
    \               shift and go to state 39
    _               shift and go to state 66
    `               shift and go to state 52
    {               shift and go to state 72
    }               shift and go to state 41
    ~               shift and go to state 58
    ESCAPED         shift and go to state 5
    ALPHA           shift and go to state 30
    DIGIT           shift and go to state 29
    OTHER           shift and go to state 8

    classrange                     shift and go to state 69
    classatom                      shift and go to state 38
    classliteral                   shift and go to state 46
    classitems                     shift and go to state 47
    baseitems                      shift and go to state 48
    classitems2                    shift and go to state 65
    literal                        shift and go to state 70

state 5

    (93) literal -> ESCAPED .

    *               reduce using rule 93 (literal -> ESCAPED .)
    +               reduce using rule 93 (literal -> ESCAPED .)
    ?               reduce using rule 93 (literal -> ESCAPED .)
    {               reduce using rule 93 (literal -> ESCAPED .)
    (               reduce using rule 93 (literal -> ESCAPED .)
    ^               reduce using rule 93 (literal -> ESCAPED .)
    >               reduce using rule 93 (literal -> ESCAPED .)
    <               reduce using rule 93 (literal -> ESCAPED .)
    /               reduce using rule 93 (literal -> ESCAPED .)
    \               reduce using rule 93 (literal -> ESCAPED .)
    #               reduce using rule 93 (literal -> ESCAPED .)
    %               reduce using rule 93 (literal -> ESCAPED .)
    ESCAPED         reduce using rule 93 (literal -> ESCAPED .)
    ALPHA           reduce using rule 93 (literal -> ESCAPED .)
    DIGIT           reduce using rule 93 (literal -> ESCAPED .)
    OTHER           reduce using rule 93 (literal -> ESCAPED .)
    [               reduce using rule 93 (literal -> ESCAPED .)
    .               reduce using rule 93 (literal -> ESCAPED .)
    !               reduce using rule 93 (literal -> ESCAPED .)
    $               reduce using rule 93 (literal -> ESCAPED .)
    `               reduce using rule 93 (literal -> ESCAPED .)
    |               reduce using rule 93 (literal -> ESCAPED .)
    $end            reduce using rule 93 (literal -> ESCAPED .)
    )               reduce using rule 93 (literal -> ESCAPED .)
    -               reduce using rule 93 (literal -> ESCAPED .)
    "               reduce using rule 93 (literal -> ESCAPED .)
    &               reduce using rule 93 (literal -> ESCAPED .)
    '               reduce using rule 93 (literal -> ESCAPED .)
    ,               reduce using rule 93 (literal -> ESCAPED .)
    :               reduce using rule 93 (literal -> ESCAPED .)
    ;               reduce using rule 93 (literal -> ESCAPED .)
    =               reduce using rule 93 (literal -> ESCAPED .)
    @               reduce using rule 93 (literal -> ESCAPED .)
    _               reduce using rule 93 (literal -> ESCAPED .)
    }               reduce using rule 93 (literal -> ESCAPED .)
    ~               reduce using rule 93 (literal -> ESCAPED .)
    ]               reduce using rule 93 (literal -> ESCAPED .)


state 6

    (31) nodisplay -> ! .

    *               reduce using rule 31 (nodisplay -> ! .)
    +               reduce using rule 31 (nodisplay -> ! .)
    ?               reduce using rule 31 (nodisplay -> ! .)
    {               reduce using rule 31 (nodisplay -> ! .)
    (               reduce using rule 31 (nodisplay -> ! .)
    ^               reduce using rule 31 (nodisplay -> ! .)
    >               reduce using rule 31 (nodisplay -> ! .)
    <               reduce using rule 31 (nodisplay -> ! .)
    /               reduce using rule 31 (nodisplay -> ! .)
    \               reduce using rule 31 (nodisplay -> ! .)
    #               reduce using rule 31 (nodisplay -> ! .)
    %               reduce using rule 31 (nodisplay -> ! .)
    ESCAPED         reduce using rule 31 (nodisplay -> ! .)
    ALPHA           reduce using rule 31 (nodisplay -> ! .)
    DIGIT           reduce using rule 31 (nodisplay -> ! .)
    OTHER           reduce using rule 31 (nodisplay -> ! .)
    [               reduce using rule 31 (nodisplay -> ! .)
    .               reduce using rule 31 (nodisplay -> ! .)
    !               reduce using rule 31 (nodisplay -> ! .)
    $               reduce using rule 31 (nodisplay -> ! .)
    `               reduce using rule 31 (nodisplay -> ! .)
    |               reduce using rule 31 (nodisplay -> ! .)
    $end            reduce using rule 31 (nodisplay -> ! .)
    )               reduce using rule 31 (nodisplay -> ! .)


state 7

    (90) command -> \ .

    *               reduce using rule 90 (command -> \ .)
    +               reduce using rule 90 (command -> \ .)
    ?               reduce using rule 90 (command -> \ .)
    {               reduce using rule 90 (command -> \ .)
    (               reduce using rule 90 (command -> \ .)
    ^               reduce using rule 90 (command -> \ .)
    >               reduce using rule 90 (command -> \ .)
    <               reduce using rule 90 (command -> \ .)
    /               reduce using rule 90 (command -> \ .)
    \               reduce using rule 90 (command -> \ .)
    #               reduce using rule 90 (command -> \ .)
    %               reduce using rule 90 (command -> \ .)
    ESCAPED         reduce using rule 90 (command -> \ .)
    ALPHA           reduce using rule 90 (command -> \ .)
    DIGIT           reduce using rule 90 (command -> \ .)
    OTHER           reduce using rule 90 (command -> \ .)
    [               reduce using rule 90 (command -> \ .)
    .               reduce using rule 90 (command -> \ .)
    !               reduce using rule 90 (command -> \ .)
    $               reduce using rule 90 (command -> \ .)
    `               reduce using rule 90 (command -> \ .)
    |               reduce using rule 90 (command -> \ .)
    $end            reduce using rule 90 (command -> \ .)
    )               reduce using rule 90 (command -> \ .)


state 8

    (96) literal -> OTHER .

    *               reduce using rule 96 (literal -> OTHER .)
    +               reduce using rule 96 (literal -> OTHER .)
    ?               reduce using rule 96 (literal -> OTHER .)
    {               reduce using rule 96 (literal -> OTHER .)
    (               reduce using rule 96 (literal -> OTHER .)
    ^               reduce using rule 96 (literal -> OTHER .)
    >               reduce using rule 96 (literal -> OTHER .)
    <               reduce using rule 96 (literal -> OTHER .)
    /               reduce using rule 96 (literal -> OTHER .)
    \               reduce using rule 96 (literal -> OTHER .)
    #               reduce using rule 96 (literal -> OTHER .)
    %               reduce using rule 96 (literal -> OTHER .)
    ESCAPED         reduce using rule 96 (literal -> OTHER .)
    ALPHA           reduce using rule 96 (literal -> OTHER .)
    DIGIT           reduce using rule 96 (literal -> OTHER .)
    OTHER           reduce using rule 96 (literal -> OTHER .)
    [               reduce using rule 96 (literal -> OTHER .)
    .               reduce using rule 96 (literal -> OTHER .)
    !               reduce using rule 96 (literal -> OTHER .)
    $               reduce using rule 96 (literal -> OTHER .)
    `               reduce using rule 96 (literal -> OTHER .)
    |               reduce using rule 96 (literal -> OTHER .)
    $end            reduce using rule 96 (literal -> OTHER .)
    )               reduce using rule 96 (literal -> OTHER .)
    -               reduce using rule 96 (literal -> OTHER .)
    "               reduce using rule 96 (literal -> OTHER .)
    &               reduce using rule 96 (literal -> OTHER .)
    '               reduce using rule 96 (literal -> OTHER .)
    ,               reduce using rule 96 (literal -> OTHER .)
    :               reduce using rule 96 (literal -> OTHER .)
    ;               reduce using rule 96 (literal -> OTHER .)
    =               reduce using rule 96 (literal -> OTHER .)
    @               reduce using rule 96 (literal -> OTHER .)
    _               reduce using rule 96 (literal -> OTHER .)
    }               reduce using rule 96 (literal -> OTHER .)
    ~               reduce using rule 96 (literal -> OTHER .)
    ]               reduce using rule 96 (literal -> OTHER .)


state 9

    (85) anchor -> $ . DIGIT
    (86) anchor -> $ . ALPHA

    DIGIT           shift and go to state 74
    ALPHA           shift and go to state 73


state 10

    (0) S' -> re .
    (3) alternation -> re . | simple

    |               shift and go to state 75


state 11

    (15) elementary -> literal .

    *               reduce using rule 15 (elementary -> literal .)
    +               reduce using rule 15 (elementary -> literal .)
    ?               reduce using rule 15 (elementary -> literal .)
    {               reduce using rule 15 (elementary -> literal .)
    (               reduce using rule 15 (elementary -> literal .)
    ^               reduce using rule 15 (elementary -> literal .)
    >               reduce using rule 15 (elementary -> literal .)
    <               reduce using rule 15 (elementary -> literal .)
    /               reduce using rule 15 (elementary -> literal .)
    \               reduce using rule 15 (elementary -> literal .)
    #               reduce using rule 15 (elementary -> literal .)
    %               reduce using rule 15 (elementary -> literal .)
    ESCAPED         reduce using rule 15 (elementary -> literal .)
    ALPHA           reduce using rule 15 (elementary -> literal .)
    DIGIT           reduce using rule 15 (elementary -> literal .)
    OTHER           reduce using rule 15 (elementary -> literal .)
    [               reduce using rule 15 (elementary -> literal .)
    .               reduce using rule 15 (elementary -> literal .)
    !               reduce using rule 15 (elementary -> literal .)
    $               reduce using rule 15 (elementary -> literal .)
    `               reduce using rule 15 (elementary -> literal .)
    |               reduce using rule 15 (elementary -> literal .)
    )               reduce using rule 15 (elementary -> literal .)
    $end            reduce using rule 15 (elementary -> literal .)


state 12

    (88) command -> < .

    *               reduce using rule 88 (command -> < .)
    +               reduce using rule 88 (command -> < .)
    ?               reduce using rule 88 (command -> < .)
    {               reduce using rule 88 (command -> < .)
    (               reduce using rule 88 (command -> < .)
    ^               reduce using rule 88 (command -> < .)
    >               reduce using rule 88 (command -> < .)
    <               reduce using rule 88 (command -> < .)
    /               reduce using rule 88 (command -> < .)
    \               reduce using rule 88 (command -> < .)
    #               reduce using rule 88 (command -> < .)
    %               reduce using rule 88 (command -> < .)
    ESCAPED         reduce using rule 88 (command -> < .)
    ALPHA           reduce using rule 88 (command -> < .)
    DIGIT           reduce using rule 88 (command -> < .)
    OTHER           reduce using rule 88 (command -> < .)
    [               reduce using rule 88 (command -> < .)
    .               reduce using rule 88 (command -> < .)
    !               reduce using rule 88 (command -> < .)
    $               reduce using rule 88 (command -> < .)
    `               reduce using rule 88 (command -> < .)
    |               reduce using rule 88 (command -> < .)
    $end            reduce using rule 88 (command -> < .)
    )               reduce using rule 88 (command -> < .)


state 13

    (87) command -> > .

    *               reduce using rule 87 (command -> > .)
    +               reduce using rule 87 (command -> > .)
    ?               reduce using rule 87 (command -> > .)
    {               reduce using rule 87 (command -> > .)
    (               reduce using rule 87 (command -> > .)
    ^               reduce using rule 87 (command -> > .)
    >               reduce using rule 87 (command -> > .)
    <               reduce using rule 87 (command -> > .)
    /               reduce using rule 87 (command -> > .)
    \               reduce using rule 87 (command -> > .)
    #               reduce using rule 87 (command -> > .)
    %               reduce using rule 87 (command -> > .)
    ESCAPED         reduce using rule 87 (command -> > .)
    ALPHA           reduce using rule 87 (command -> > .)
    DIGIT           reduce using rule 87 (command -> > .)
    OTHER           reduce using rule 87 (command -> > .)
    [               reduce using rule 87 (command -> > .)
    .               reduce using rule 87 (command -> > .)
    !               reduce using rule 87 (command -> > .)
    $               reduce using rule 87 (command -> > .)
    `               reduce using rule 87 (command -> > .)
    |               reduce using rule 87 (command -> > .)
    $end            reduce using rule 87 (command -> > .)
    )               reduce using rule 87 (command -> > .)


state 14

    (20) elementary -> predefined .

    *               reduce using rule 20 (elementary -> predefined .)
    +               reduce using rule 20 (elementary -> predefined .)
    ?               reduce using rule 20 (elementary -> predefined .)
    {               reduce using rule 20 (elementary -> predefined .)
    (               reduce using rule 20 (elementary -> predefined .)
    ^               reduce using rule 20 (elementary -> predefined .)
    >               reduce using rule 20 (elementary -> predefined .)
    <               reduce using rule 20 (elementary -> predefined .)
    /               reduce using rule 20 (elementary -> predefined .)
    \               reduce using rule 20 (elementary -> predefined .)
    #               reduce using rule 20 (elementary -> predefined .)
    %               reduce using rule 20 (elementary -> predefined .)
    ESCAPED         reduce using rule 20 (elementary -> predefined .)
    ALPHA           reduce using rule 20 (elementary -> predefined .)
    DIGIT           reduce using rule 20 (elementary -> predefined .)
    OTHER           reduce using rule 20 (elementary -> predefined .)
    [               reduce using rule 20 (elementary -> predefined .)
    .               reduce using rule 20 (elementary -> predefined .)
    !               reduce using rule 20 (elementary -> predefined .)
    $               reduce using rule 20 (elementary -> predefined .)
    `               reduce using rule 20 (elementary -> predefined .)
    |               reduce using rule 20 (elementary -> predefined .)
    )               reduce using rule 20 (elementary -> predefined .)
    $end            reduce using rule 20 (elementary -> predefined .)


state 15
